Enhance footer layout and styling with responsive design and new utility classes

--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,12 @@ body {
 .btn-primary {
     @apply bg-primary-blue
 }
+
+footer nav {
+    & h3 {
+        @apply font-bold mb-3;
+    }
+    & ul {
+        @apply space-y-3
+    }
+}
