Add utility classes for margin adjustments and center alignment in hero section

--- a/css/main.css
+++ b/css/main.css
@@ -634,6 +634,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -910,6 +914,10 @@ footer nav {
     --tw-space-y-reverse: 0;
     margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:place-self-center {
+    place-self: center;
   }
 
   .lg\:py-10 {
