--- a/css/main.css
+++ b/css/main.css
@@ -592,11 +592,6 @@ video {
   margin: 6rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -619,16 +614,16 @@ video {
   margin-left: 1rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .flex {
@@ -659,6 +654,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-12 {
   gap: 3rem;
 }
@@ -683,16 +682,13 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .bg-background-blue {
   background-color: #0F37761F;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .py-28 {
@@ -727,17 +723,8 @@ video {
   line-height: 1rem;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-stone-500 {
@@ -745,11 +732,8 @@ video {
   color: rgb(120 113 108 / var(--tw-text-opacity));
 }
 
-body {
-  font-family: Inter, sans-serif;
-}
-
 * {
+  line-height: 1.5;
   & h1,h2,h3,h4,h5,h6 {
     font-weight: 800;
   }
@@ -759,9 +743,25 @@ body {
   }
 }
 
+body {
+  font-family: Inter, sans-serif;
+}
+
+h1 {
+  font-size: 4.5rem;
+  line-height: 1.375;
+}
+
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
 h2 {
   font-size: 3.75rem;
-  line-height: 1;
+  line-height: 2;
 }
 
 @media (min-width: 1024px) {
@@ -785,7 +785,7 @@ h3 {
 
 p {
   font-size: 3rem;
-  line-height: 1;
+  line-height: 1.5;
 }
 
 @media (min-width: 1024px) {
@@ -798,9 +798,6 @@ p {
 a {
   --tw-text-opacity: 1;
   color: rgb(0 88 143 / var(--tw-text-opacity));
-  &:hover {
-    font-weight: 600;
-  }
 }
 
 footer nav {
@@ -879,28 +876,14 @@ ul.custom-bullet {
 
 .hero-text {
   & h1 {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-  & h1 {
-    font-weight: 800;
-  }
-  & h1 {
     text-transform: uppercase;
-  }
-  & h1 {
-    --tw-text-opacity: 1;
-    color: rgb(0 88 143 / var(--tw-text-opacity));
-  }
-  @media (min-width: 1024px) {
-    & h1 {
-      font-size: 2.25rem;
-      line-height: 2.5rem;
-    }
   }
   & p {
     font-size: 3rem;
     line-height: 1;
+  }
+  & p {
+    line-height: 1.5;
   }
   @media (min-width: 1024px) {
     & p {
@@ -908,6 +891,55 @@ ul.custom-bullet {
       line-height: 1.75rem;
     }
   }
+}
+
+div.landing-tag {
+  width: 100%;
+  border-radius: 0.75rem;
+  background-color: #0F37761F;
+  padding: 7rem;
+}
+
+@media (min-width: 1024px) {
+  div.landing-tag {
+    width: 33.333333%;
+    padding: 2.5rem;
+  }
+}
+
+div.landing-tag {
+  & figure {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  & figure {
+    width: 66.666667%;
+  }
+  @media (min-width: 1024px) {
+    & figure {
+      width: 100%;
+    }
+  }
+  & figure {
+    & img {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    & img {
+      width: 100%;
+    }
+  }
+  & h3 {
+    font-weight: 300;
+  }
+  & h3 {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
 }
 
 @media (min-width: 768px) {
@@ -927,10 +959,6 @@ ul.custom-bullet {
 
   .lg\:grid {
     display: grid;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .lg\:w-10\/12 {
@@ -959,6 +987,10 @@ ul.custom-bullet {
 
   .lg\:gap-0 {
     gap: 0px;
+  }
+
+  .lg\:gap-12 {
+    gap: 3rem;
   }
 
   .lg\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
