--- a/src/style.css
+++ b/src/style.css
@@ -2,18 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    @apply font-sans;
-}
-
 * {
+    @apply leading-normal;
     & h1,h2,h3,h4,h5,h6 {
         @apply font-extrabold text-primary-blue;
     }
 }
 
+body {
+    @apply font-sans;
+}
+
+
+h1 {
+    @apply lg:text-4xl text-7xl leading-snug;
+}
+
 h2 {
-    @apply text-6xl lg:text-4xl;
+    @apply text-6xl lg:text-4xl leading-loose;
 }
 
 h3 {
@@ -21,14 +27,11 @@ h3 {
 }
 
 p {
-    @apply text-5xl lg:text-xl;
+    @apply text-5xl lg:text-xl leading-normal;
 }
 
 a {
     @apply text-primary-blue;
-    &:hover {
-        @apply font-semibold;
-    }
 }
 
 footer nav {
@@ -64,9 +67,22 @@ ul.custom-bullet {
 
 .hero-text {
     & h1 {
-        @apply lg:text-4xl text-6xl font-extrabold text-primary-blue uppercase;
+        @apply uppercase
     }
     & p {
-        @apply lg:text-lg text-5xl;
+        @apply lg:text-lg text-5xl leading-normal;
+    }
+}
+
+div.landing-tag {
+    @apply lg:w-1/3 w-full bg-background-blue rounded-xl lg:p-10 p-28;
+    & figure {
+        @apply mx-auto w-2/3 lg:w-full;
+        & img {
+            @apply mx-auto w-full;
+        }
+    }
+    & h3 {
+        @apply font-light text-black;
     }
 }
